<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
    </parent>

    <groupId>io.github.tmgg</groupId>

    <artifactId>tmgg-system-parent</artifactId>
    <name>tmgg-system-parent</name>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <description>小型后台管理框架</description>
    <modules>
        <module>tmgg-base</module>
        <module>tmgg-system</module>
        <module>tmgg-system-plugins</module>
    </modules>


    <properties>
       <!-- 这个表示版本号，构建时动态指定参数即可 如 mvn package -Drevision=1.1.1-->
        <revision>1.1.60</revision>
        <java.version>17</java.version>
        <compile.version>17</compile.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>


        <doclint>none</doclint>
        <hutool.version>5.8.39</hutool.version>
        <poi.version>5.2.3</poi.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
    </properties>

    <url>https://github.com/tmgg/tmgg</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>tmgg</name>
            <email>410518072@qq.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git:github.com/tmgg/tmgg.git</connection>
        <developerConnection>scm:git@github.com:tmgg/tmgg.git</developerConnection>
        <url>https://github.com/tmgg/tmgg/tree/master</url>
    </scm>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- 文件型数据库，方便cicd测试-->
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>10.14.2.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-base</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-system</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-system-flowable</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-system-kettle</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-system-ureport</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-commons-lang</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-system-weixin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-system-payment</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-commons-jdbc</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-commons-web-framework</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-commons-log-view</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-commons-jackson</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.tmgg</groupId>
                <artifactId>tmgg-commons-poi</artifactId>
                <version>${revision}</version>
            </dependency>



            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.18.0</version>
            </dependency>
        </dependencies>

    </dependencyManagement>


    <profiles>
        <profile>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <id>publishMavenCentral</id>

            <build>
                <plugins>

                    <!-- publish to center -->
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.3.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <autoPublish>true</autoPublish>
                            <publishingServerId>central</publishingServerId>
                            <tokenAuth>true</tokenAuth>
                        </configuration>
                    </plugin>

                    <!-- sign jar -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <!--必须配置，用于 gpg 非交互式密码输入 -->
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>


        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <encoding>utf-8</encoding>
                    <charset>utf-8</charset>
                    <docencoding>utf-8</docencoding>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>oss</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${compile.version}</source>
                    <target>${compile.version}</target>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                    <encoding>UTF-8</encoding>

                    <!-- 排除开发用到时的启动文件-->
                    <excludes>
                        <exclude>io/tmgg/*Application.java</exclude>
                    </excludes>

                    <!-- 调整lombok和mapstruct的顺序，两者都会处理注解 -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!--打包时，为了批量修改版本 revision 变成真正的版本号，而不是占位符-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.3.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
